Fix input bar invisible on some android devices

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ html {
 body {
   position: fixed;
   width: 100%;
-  height: 100%;
+  height: 100dvh;
 }
 
 /* Common page container styles */
